<resources>
    <string name="app_name">MakEvent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="item_default_name">Name of event</string>
    <string name="item_default_date">DD/MM/YY</string>
    <string name="item_default_hour">HH:MM</string>
    <string name="item_default_location">Location</string>
    <string name="item_default_theme">Theme</string>
    <string name="item_default_nb_participant">Nb of participant</string>
</resources>