<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingTop="10dp"
    android:id="@+id/layoutID">


    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/item_default_name">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_default_date"
            android:textSize="15dp"/>

        <TextView
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:id="@+id/item_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_date"
            android:text="@string/item_default_hour"
            android:textSize="15dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_location"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/item_default_location"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/item_default_theme"
            android:textSize="15dp"></TextView>

        <TextView
            android:id="@+id/idEventText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_10ssp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_10ssp"
            android:layout_toRightOf="@+id/item_theme"
            android:gravity="right"
            android:text="idEvent"
            android:textSize="15dp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/item_nb_participant"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/item_default_nb_participant">
    </TextView>




</LinearLayout>